Fix too big card

--- a/custom/scss/app.scss
+++ b/custom/scss/app.scss
@@ -520,5 +520,7 @@ section.navigation-child{
   filter: blur(3px);
 }
 
-
+.picker__holder{
+  overflow-y: hidden;
+}
 /*end*/
