--- a/public/stylesheets/doctors-search.css
+++ b/public/stylesheets/doctors-search.css
@@ -9240,6 +9240,10 @@ section.navigation-child .button {
   filter: blur(3px);
 }
 
+.picker__holder {
+  overflow-y: hidden;
+}
+
 /*end*/
 .selector {
   position: relative;
