--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -9241,6 +9241,10 @@ section.navigation-child .button {
   filter: blur(3px);
 }
 
+.picker__holder {
+  overflow-y: hidden;
+}
+
 /*end*/
 .home > article > section {
   margin-top: 4%;
