--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -9422,6 +9422,10 @@ section.navigation-child .button {
   filter: blur(3px);
 }
 
+.picker__holder {
+  overflow-y: hidden;
+}
+
 /*end*/
 /* ------------ NAVBAR ------------- */
 nav.main-navigation {
